--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,12 +1,59 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-.font-open-sans{
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
+
+/* shared style */
+.font-open-sans {
+     font-family: "Open Sans", sans-serif;
+     font-optical-sizing: auto;
 }
-header{
+
+.logo h2 {
+   font-size: 45px;
+}
+
+.color-orange {
+    color: #fd6e0a;
+    font-weight: 900;
+}
+
+.btn {
+    background-color: #fd6e0a;
+    border: none;
+    padding: 18px 36px;
+    border-radius: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+}
+
+/* main style */
+header {
     background-color: #fff8f3;
+    padding: 50px;
+}
+
+nav {
+    width: 74%;
+    max-width: 1140px;
+    /* border: 1px solid red; */
+    margin: 0 auto;   /* margin 0 means se upore niche pabe 0px and auto means se left right e auto margin niye middle e chole ashbe */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .menu {
+    display: flex;
+    list-style-type: none;
+    gap: 51px;
+    align-items: center;
+}
+
+nav .menu a {
+    font-size: 20px;
+    color: #474747;
+    text-decoration: none;
 }
